--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,11 @@ body{
     border: none;
     outline: none;
 }
+
+#display-area{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 25px 25px 50px;
+}
