--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,5 +66,19 @@ body{
 #time{
     font-size:2.5rem;
     margin-bottom: 15px;
+}
 
+#temperature{
+    font-size: 7rem;
+    font-weight: 800;
+    text-shadow: 0px 3px rgba(0, 0, 0, 0.4);
+    color: #262d43;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+#temp-range{
+    font-size: 2.5rem;
+    font-family: 'Lato', sans-serif;
+    color: #262d43;
 }
