--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
     
 }
 ::placeholder { 
-    color:honeydew;
+    color: aliceblue;
     opacity: 1; 
   }
   
@@ -18,26 +18,29 @@ body{
     flex-direction: column;
     min-height: 100vh;
     font-family: 'Merriweather Sans', sans-serif;
-    background-image: linear-gradient(to bottom, rgba(219, 117, 21, 0.3), rgba(8, 17, 70, 0.8));
+    background-image: linear-gradient(to bottom, rgba(252, 124, 5, 0.3), rgba(2, 3, 43, 0.9));
 }
 
 #button{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 80px 20px 20px;
+    padding: 110px 20px 20px;
+    
 }
 .search-bar{
     width: 100%;
     max-width: 300px;
-    padding: 15px 10px;
+    padding: 25px 10px;
     text-align: center;
     border-radius: 25px 5px 25px 5px;
     font-size: 2rem;
-    background-color:rgba(8, 17, 70, 0.8);
+    background-color:rgba(8, 17, 70, 0.404);
     font-weight: 700;
     border: none;
     outline: none;
+    color: #262d43;
+    
 }
 
 #display-area{
@@ -56,15 +59,17 @@ body{
 #city{
     font-size: 4.5rem;
     margin-bottom: 15px;
+    font-weight: 500;
+    border-bottom: solid 2px #262d43;
 }
 
 #day{
-    font-size: 4rem;
+    font-size: 2.5rem;
     margin-bottom: 15px;
 }
 
 #time{
-    font-size:2.5rem;
+    font-size:2rem;
     margin-bottom: 15px;
 }
 
@@ -75,6 +80,7 @@ body{
     color: #262d43;
     margin-top: 30px;
     margin-bottom: 20px;
+    border: solid 2px #262626;
 }
 
 #temp-range{
