--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 110px 20px 20px;
+    padding: 50px 20px 20px;
     
 }
 .search-bar{
@@ -82,9 +82,10 @@ body{
 }
 
 #forcast{
-    font-size:4rem;
+    font-size:4.5rem;
     margin-bottom: 15px;
     font-weight: 700;
+    color: #db7515b0;
 }
 
 #temperature{
@@ -92,17 +93,19 @@ body{
     font-weight: 800;
     text-shadow: 0px 3px rgba(0, 0, 0, 0.4);
     color: #262d43;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #temp-range{
     font-size: 3.5rem;
     font-family: 'Lato', sans-serif;
-    color: #262d43;
-    font-weight: 500;
+    color:  #db7515b0;
+    font-weight: 700;
 }
 
-#temp-icon-img{
-    width:325px;
+img{
+    vertical-align: middle;
+    border-style: none;
+    width: -webkit-fill-available;
 }
